--- a/web/index.html
+++ b/web/index.html
@@ -113,6 +113,45 @@
     </div>
   </section>
 
+  <section class="quebra">
+    <blockquote class="quote-externo container">
+      <p>"o verdadeiro segredo da felicidade está em ter um genuíno interesse por todos os detalhes da vida cotidiana"</p>
+      <cite>William Morris</cite>
+    </blockquote>
+  </section>
+
+  <footer>
+    <div class="footer">
+      <div class="container">
+        <div class="grid-8 footer-historia">
+          <h3>Nossa História</h3>
+          <p>O verdadeiro segredo da felicidade está em te rum genuíno interesse por todos os detalhes da vida cotidiana cotidiana. Interesse por todos os detalhes da vida cotidiana cotidiana.</p>
+        </div>
+        <div class="grid-4 footer-contato">
+          <h3>Contato</h3>
+          <ul>
+            <li>- 21 2323-4343</li>
+            <li>- contato@bikcraft.com</li>
+            <li>- Botafogo - RJ</li>
+          </ul>
+        </div>
+        <div class="grid-4 footer-redes">
+          <h3>Redes Sociais</h3>
+          <ul>
+            <li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="Facebook"></a></li>
+            <li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="Instagram"></a></li>
+            <li><a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="Twitter"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <div class="container">
+        <p class="grid-16">Bikcraft 2020 - Alguns direitos reservados.</p>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
