Finished Produtos page

--- a/web/produtos.html
+++ b/web/produtos.html
@@ -20,8 +20,8 @@
       </a>
       <nav class="header-menu" class="grid-12">
         <ul>
-          <li><a href="sobre.html" class="menu-ativo">Sobre</a></li>
-          <li><a href="produtos.html">Produtos</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="produtos.html" class="menu-ativo">Produtos</a></li>
           <li><a href="portfolio.html">Portfólio</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
@@ -59,6 +59,7 @@
       </ul>
     </div>
   </section>
+
   <section class="container produtos-item">
     <div class="grid-11">
       <img src="./img/produtos/bikcraft-esporte-1.jpg" alt="">
@@ -82,6 +83,7 @@
       </ul>
     </div>
   </section>
+
   <section class="container produtos-item">
     <div class="grid-11">
       <img src="./img/produtos/bikcraft-retro-1.jpg" alt="">
@@ -105,6 +107,38 @@
       </ul>
     </div>
 
+  </section>
+
+  <section class="produtos-orcamento">
+    <div class="container">
+      <h2 class="subtitulo subtitulo-amarelo">Orçamento</h2>
+      <form action="" id="form-orcamento" class="produtos-form grid-8">
+        <label for="nome">Nome</label>
+        <input type="text" name="nome" id="nome">
+        <label for="email">E-mail</label>
+        <input type="email" name="email" id="email">
+        <label for="telefone">Telefone</label>
+        <input type="text" name="telefone" id="telefone">
+        <label for="espec">Especificações</label>
+        <textarea name="espec" id="espec"></textarea>
+        <button type="submit" class="btn">Enviar</button>
+      </form>
+      <div class="orcamento-dados grid-8">
+        <h3>Dados</h3>
+        <span>+55 21 93223 3232</span>
+        <span>orcamento@bikcraft.com</span>
+
+        <h3>Monte a sua bikcraft</h3>
+        <p>Escolha as especificações:</p>
+        <ul>
+          <li>- Cores</li>
+          <li>- Estilo</li>
+          <li>- Medidas</li>
+          <li>- Acessórios</li>
+          <li>- E outros</li>
+        </ul>
+      </div>
+    </div>
   </section>
 
   <section class="quebra">
