Added animations to all pages

--- a/web/contato.html
+++ b/web/contato.html
@@ -35,12 +35,12 @@
 
   <section class="introducao-interna interna-contato">
     <div class="container">
-      <h1>Contato</h1>
-      <p>tire suas dúvidas com a gente</p>
+      <h1 data-anime="400" class="fadeInDown">Contato</h1>
+      <p data-anime="800" class="fadeInDown">tire suas dúvidas com a gente</p>
     </div>
   </section>
 
-  <section class="contato container">
+  <section data-anime="1200" class="contato container fadeInDown">
     <form action="" id="form-orcamento" class="contato-form grid-8">
       <label for="nome">Nome</label>
       <input type="text" name="nome" id="nome">
@@ -112,7 +112,8 @@
       </div>
     </div>
   </footer>
-
+  <script src="./js/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
