--- a/web/portfolio.html
+++ b/web/portfolio.html
@@ -35,12 +35,12 @@
 
   <section class="introducao-interna interna-portfolio">
     <div class="container">
-      <h1>Portfólio</h1>
-      <p>conheça os projetos que amamos mostrar</p>
+      <h1 data-anime="400" class="fadeInDown">Portfólio</h1>
+      <p data-anime="800" class="fadeInDown">conheça os projetos que amamos mostrar</p>
     </div>
   </section>
 
-  <section class="container" data-slide="quote">
+  <section data-anime="1200" class="container fadeInDown" data-slide="quote">
     <blockquote class="quote-clientes">
       <p>"Adorei demais a bicicleta que a bikcraft fez para mim. Uso ela todo dia, desde ir para o trabalho, até para lazer mesmo. Qualidade impecável."</p>
       <cite>Bárbara Moss</cite>
@@ -109,7 +109,7 @@
       </div>
     </div>
   </footer>
-
+  <script src="./js/simple-anime.js"></script>
   <script src="./js/simple-slide.js"></script>
   <script src="./js/script.js"></script>
 
