--- a/web/sobre.html
+++ b/web/sobre.html
@@ -35,12 +35,12 @@
 
   <section class="introducao-interna interna-sobre">
     <div class="container">
-      <h1>Sobre</h1>
-      <p>conheça mais sobre a bikcraft</p>
+      <h1 data-anime="400" class="fadeInDown">Sobre</h1>
+      <p data-anime="800" class="fadeInDown">conheça mais sobre a bikcraft</p>
     </div>
   </section>
 
-  <section class="missao-sobre container">
+  <section data-anime="1200" class="missao-sobre container fadeInDown">
     <div class="grid-10">
       <h2 class="subtitulo-interno">História, Missão e Visão</h2>
       <p>Mussum Ipsum, cacilds vidis litro abertis. Diuretics paradis num copo é motivis de denguis. Praesent vel viverra nisi. Mauris aliquet nunc non turpis scelerisque, eget. Praesent malesuada urna nisi, quis volutpat erat hendrerit non. Nam vulputate dapibus. Per aumento de cachacis, eu reclamis.</p>
@@ -118,7 +118,8 @@
       </div>
     </div>
   </footer>
-
+  <script src="./js/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
